--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   </head>
   <body>
     <h1>Welcome to my Weather App</h1>
-    <footer>Coded by Sizophila Ngcobo</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/sizophila10/" target="blank"
+        >Sizophila Ngcobo</a
+      >, code hosted on
+      <a
+        href="https://github.com/sizophila10/sizophila-new-weather-app"
+        target="_blank"
+        >Github</a
+      >
+      and website
+      <a href="https://sizophila-weather-app.netlify.app/" target="_blank">
+        on Netlify</a
+      >
+    </footer>
   </body>
 </html>
