--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
       Coded by
       <a href="https://github.com/sizophila10/" target="blank"
         >Sizophila Ngcobo</a
-      >, code hosted on
+      >, is
       <a
         href="https://github.com/sizophila10/sizophila-new-weather-app"
         target="_blank"
-        >Github</a
       >
-      and website
+        open-sourced on Github</a
+      >
+      and
       <a href="https://sizophila-weather-app.netlify.app/" target="_blank">
-        on Netlify</a
+        hosted on Netlify</a
       >
     </footer>
   </body>
