--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to my Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 14:50, sunny <br />
+          Humidity: 49%, Wind:5.61km/h
+        </p>
+      </div>
+      <div>☀️ 25°C</div>
+    </main>
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/sizophila10/" target="blank"
         >Sizophila Ngcobo</a
       >, is
