--- a/index.html
+++ b/index.html
@@ -3,40 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:50, sunny <br />
-          Humidity: 49%, Wind:5.61km/h
-        </p>
-      </div>
-      <div>☀️ 25°C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/sizophila10/" target="blank"
-        >Sizophila Ngcobo</a
-      >, is
-      <a
-        href="https://github.com/sizophila10/sizophila-new-weather-app"
-        target="_blank"
-      >
-        open-sourced on Github</a
-      >
-      and
-      <a href="https://sizophila-weather-app.netlify.app/" target="_blank">
-        hosted on Netlify</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Tuesday 14:50, sunny <br />
+            Humidity: 49%, Wind:5.61km/h
+          </p>
+        </div>
+        <div>☀️ 25°C</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/sizophila10/" target="blank"
+          >Sizophila Ngcobo</a
+        >, is
+        <a
+          href="https://github.com/sizophila10/sizophila-new-weather-app"
+          target="_blank"
+        >
+          open-sourced on Github</a
+        >
+        and
+        <a href="https://sizophila-weather-app.netlify.app/" target="_blank">
+          hosted on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
