--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="weather-app">
@@ -37,7 +38,7 @@
           </div>
           <div class="weather-app-temperature-container">
             <div class="weather-app-icon">☀️</div>
-            <div class="weather-app-temperature">25</div>
+            <div class="weather-app-temperature" id="temperature">25</div>
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
