--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
           <div>
             <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
-              Tuesday 14:50, sunny <br />
-              Humidity:<strong>49%</strong>, Wind:<strong>5.61km/h</strong>/
+              <span id="time"></span>,<span id="description"></span>
+              <br />
+              Humidity:<strong id="humidity"></strong>, Wind:<strong
+                id="wind-speed"
+              ></strong
+              >/
             </p>
           </div>
           <div class="weather-app-temperature-container">
