--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">☀️</div>
+            <div id="icon"></div>
+
             <div class="weather-app-temperature" id="temperature">25</div>
             <div class="weather-app-unit">°C</div>
           </div>
